Add final paper sections for introduction, implementation and conclusion

--- a/final-paper/paper.bib
+++ b/final-paper/paper.bib
@@ -1,12 +1,123 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Anna Scholtz at 2018-02-04 19:37:56 -0800 
+%% Created for Anna Scholtz at 2018-03-23 12:52:11 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{exploitablepython,
+	Date-Added = {2018-03-23 19:51:28 +0000},
+	Date-Modified = {2018-03-23 19:52:11 +0000},
+	Howpublished = {\url{https://stackoverflow.com/questions/4207485/exploitable-python-functions}},
+	Title = {Stackoverflow - Exploitable Python Functions}}
+
+@misc{securitytracker,
+	Date-Added = {2018-03-23 19:50:38 +0000},
+	Date-Modified = {2018-03-23 19:51:03 +0000},
+	Howpublished = {\url{https://securitytracker.com/archives/target/1631.html}},
+	Title = {Security Tracker - Python}}
+
+@misc{pytests,
+	Date-Added = {2018-03-23 19:26:44 +0000},
+	Date-Modified = {2018-03-23 19:27:09 +0000},
+	Howpublished = {\url{https://docs.pytest.org/en/latest/example/pythoncollection.html}},
+	Title = {Changing standard (Python) test discovery}}
+
+@misc{nosetests,
+	Date-Added = {2018-03-23 19:25:37 +0000},
+	Date-Modified = {2018-03-23 19:26:11 +0000},
+	Howpublished = {\url{http://nose.readthedocs.io/en/latest/finding_tests.html}},
+	Title = {nose - Finding and running tests}}
+
+@misc{safetydb,
+	Date-Added = {2018-03-23 18:15:48 +0000},
+	Date-Modified = {2018-03-23 18:16:22 +0000},
+	Howpublished = {\url{https://github.com/pyupio/safety-db}},
+	Title = {Safety DB}}
+
+@misc{sublime,
+	Date-Added = {2018-03-23 18:02:27 +0000},
+	Date-Modified = {2018-03-23 18:02:42 +0000},
+	Howpublished = {\url{https://www.sublimetext.com/}},
+	Title = {Sublime Text}}
+
+@misc{openstack,
+	Date-Added = {2018-03-23 18:01:16 +0000},
+	Date-Modified = {2018-03-23 18:01:45 +0000},
+	Howpublished = {\url{https://security.openstack.org/guidelines/dg_avoid-dangerous-input-parsing-libraries.html}},
+	Title = {Avoid dangerous file parsing and object serialization libraries}}
+
+@misc{cvedetails,
+	Date-Added = {2018-03-23 17:59:53 +0000},
+	Date-Modified = {2018-03-23 18:00:22 +0000},
+	Howpublished = {\url{https://www.cvedetails.com/vulnerability-list/vendor_id-10210/product_id-18230/Python-Python.html}},
+	Title = {CVE Details - Python}}
+
+@misc{ghpython,
+	Date-Added = {2018-03-23 17:57:54 +0000},
+	Date-Modified = {2018-03-23 17:58:34 +0000},
+	Howpublished = {\url{https://github.com/search?l=Python&q=language%3APython&ref=advsearch&type=Repositories&utf8=%E2%9C%93}},
+	Title = {Python projects on GitHub}}
+
+@book{buchmann2008post,
+	Author = {Buchmann, Johannes and Ding, Jintai},
+	Date-Added = {2018-03-23 17:43:46 +0000},
+	Date-Modified = {2018-03-23 17:43:46 +0000},
+	Publisher = {Springer Science \& Business Media},
+	Title = {Post-Quantum Cryptography: Second International Workshop, PQCrypto 2008 Cincinnati, OH, USA October 17-19, 2008 Proceedings},
+	Volume = {5299},
+	Year = {2008}}
+
+@misc{merkle,
+	Date-Added = {2018-03-23 17:41:31 +0000},
+	Date-Modified = {2018-03-23 17:41:57 +0000},
+	Howpublished = {\url{https://themerkle.com/top-4-common-web-security-vulnerabilities/}},
+	Title = {Top 4 Common Web Security Vulnerabilities},
+	Year = {2017}}
+
+@misc{cloudpassage,
+	Date-Added = {2018-03-23 17:37:53 +0000},
+	Date-Modified = {2018-03-23 17:38:21 +0000},
+	Howpublished = {\url{https://www.cloudpassage.com/company/press-releases/cloudpassage-study-finds-u-s-universities-failing-cybersecurity-education/}},
+	Title = {CloudPassage Study Finds U.S. Universities Failing in Cybersecurity Education},
+	Year = {2016}}
+
+@article{kula2018developers,
+	Author = {Kula, Raula Gaikovina and German, Daniel M and Ouni, Ali and Ishio, Takashi and Inoue, Katsuro},
+	Date-Added = {2018-03-23 17:36:45 +0000},
+	Date-Modified = {2018-03-23 17:36:45 +0000},
+	Journal = {Empirical Software Engineering},
+	Number = {1},
+	Pages = {384--417},
+	Publisher = {Springer},
+	Title = {Do developers update their library dependencies?},
+	Volume = {23},
+	Year = {2018}}
+
+@misc{vigilantpw,
+	Date-Added = {2018-03-23 17:33:57 +0000},
+	Date-Modified = {2018-03-23 17:34:58 +0000},
+	Howpublished = {\url{https://www.vigilante.pw/}},
+	Title = {Vigilante.pw - The Breached Database Directory},
+	Year = {2018}}
+
+@misc{juniper,
+	Date-Added = {2018-03-23 17:31:31 +0000},
+	Date-Modified = {2018-03-23 17:49:45 +0000},
+	Howpublished = {\url{http://news.cuna.org/articles/105948-data-breach-costs-will-soar-to-2t-juniper}},
+	Title = {Data breach costs will soar to \$2T: Juniper},
+	Year = {2015}}
+
+@misc{requires,
+	Date-Added = {2018-03-23 17:18:45 +0000},
+	Date-Modified = {2018-03-23 17:18:45 +0000},
+	Howpublished = {\url{https://requires.io/}},
+	Keywords = {https://requires.io/},
+	Title = {requires.io},
+	Urldate = {requires.io}}
 
 @misc{greenkeeper,
 	Date-Added = {2018-02-05 03:37:32 +0000},
@@ -21,13 +132,13 @@
 	Keywords = {https://msdn.microsoft.com/en-us/library/mt612872.aspx},
 	Title = {CA5350: Do Not Use Weak Cryptographic Algorithms}}
 
-@misc{requires,
+@misc{kaspersky,
+	Author = {Kaspersky Lab},
 	Date-Added = {2018-02-05 03:23:53 +0000},
-	Date-Modified = {2018-02-05 03:37:23 +0000},
-	Howpublished = {\url{https://requires.io/}},
-	Keywords = {https://requires.io/},
-	Title = {requires.io},
-	Urldate = {requires.io}}
+	Date-Modified = {2018-03-23 17:26:58 +0000},
+	Howpublished = {\url{https://media.kaspersky.com/pdf/it-risks-survey-report-cost-of-security-breaches.pdf}},
+	Title = {Damage Control: The Cost of Security Breaches IT Security Risks Special Report Series},
+	Year = {2017}}
 
 @inproceedings{kleinjung2010factorization,
 	Author = {Kleinjung, Thorsten and Aoki, Kazumaro and Franke, Jens and Lenstra, Arjen K and Thom{\'e}, Emmanuel and Bos, Joppe W and Gaudry, Pierrick and Kruppa, Alexander and Montgomery, Peter L and Osvik, Dag Arne and others},
