--- a/final-paper/paper.tex
+++ b/final-paper/paper.tex
@@ -9,6 +9,17 @@
 \usepackage{url}
 \usepackage{cleveref}         % add context-specific names before reference, e.g., Figure or
 \usepackage{listings}         % illustration of source code snippets
+\lstset
+{ %Formatting for code in appendix
+    basicstyle=\footnotesize,
+    numbers=left,
+    stepnumber=1,
+    showstringspaces=false,
+    tabsize=1,
+    breaklines=true,
+    xleftmargin=5.0ex,
+    breakatwhitespace=false,
+}
 \usepackage{microtype}        % improved text alignment, letter arrangement etc.
 \usepackage{xspace}           % spacing
 
