Add remaining sections for paper

--- a/final-paper/paper.bib
+++ b/final-paper/paper.bib
@@ -1,12 +1,51 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Anna Scholtz at 2018-03-23 12:52:11 -0700 
+%% Created for Anna Scholtz at 2018-03-23 13:08:10 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Mirhosseini:2017,
+	Acmid = {3155577},
+	Address = {Piscataway, NJ, USA},
+	Author = {Mirhosseini, Samim and Parnin, Chris},
+	Booktitle = {Proceedings of the 32Nd IEEE/ACM International Conference on Automated Software Engineering},
+	Date-Added = {2018-03-23 20:07:33 +0000},
+	Date-Modified = {2018-03-23 20:07:33 +0000},
+	Isbn = {978-1-5386-2684-9},
+	Keywords = {automated pull requests, notification fatigue, software dependencies},
+	Location = {Urbana-Champaign, IL, USA},
+	Numpages = {11},
+	Pages = {84--94},
+	Publisher = {IEEE Press},
+	Series = {ASE 2017},
+	Title = {Can Automated Pull Requests Encourage Software Developers to Upgrade Out-of-date Dependencies?},
+	Url = {http://dl.acm.org/citation.cfm?id=3155562.3155577},
+	Year = {2017},
+	Bdsk-Url-1 = {http://dl.acm.org/citation.cfm?id=3155562.3155577}}
+
+@inproceedings{muske2015efficient,
+	Author = {Muske, Tukaram and Khedker, Uday P},
+	Booktitle = {Software Reliability Engineering (ISSRE), 2015 IEEE 26th International Symposium on},
+	Date-Added = {2018-03-23 20:00:57 +0000},
+	Date-Modified = {2018-03-23 20:00:57 +0000},
+	Organization = {IEEE},
+	Pages = {270--280},
+	Title = {Efficient elimination of false positives using static analysis},
+	Year = {2015}}
+
+@inproceedings{park2016battles,
+	Author = {Park, Joonyoung and Lim, Inho and Ryu, Sukyoung},
+	Booktitle = {Software Engineering Companion (ICSE-C), IEEE/ACM International Conference on},
+	Date-Added = {2018-03-23 20:00:17 +0000},
+	Date-Modified = {2018-03-23 20:00:17 +0000},
+	Organization = {IEEE},
+	Pages = {61--70},
+	Title = {Battles with false positives in static analysis of JavaScript web applications in the wild},
+	Year = {2016}}
 
 @misc{exploitablepython,
 	Date-Added = {2018-03-23 19:51:28 +0000},
