--- a/final-paper/revelio.tex
+++ b/final-paper/revelio.tex
@@ -74,7 +74,7 @@ To determine if a project uses vulnerable dependencies, Revelio first extracts a
 Checking whether dependencies are outdated is done by extracting imports from the AST and then using the package management system pip\footnote{\url{https://pypi.python.org/pypi/pip}} to determine the currently installed version. Next, pip can retrieve all available versions of a module of which the newest will be installed. Revelio will run available tests to check if the update breaks the code. If tests fail that were executed successfully before the update, then Revelio will go back to the old version of the dependency. Currently, it is possible to update all outdated dependencies at once or to incrementally update and check if the code still runs. The latter option, however, might be very time-intensive since executing all tests over and over again can take a significant amount of time.
 
 
-\subsubsection{Testing}
+\subsubsection{Testing}\label{sec:testing}
 
 Tests are optionally executed after insecure functions have been replaced with safe alternatives or outdated dependencies have been updated. There are several testing frameworks that exist for the python ecosystem, however, there are clear favorites that exist among the developer community. From a preliminary search on GitHub, we determined that \emph{pytest}\footnote{\url{https://docs.pytest.org/en/latest/index.html}}, \emph{nose}\footnote{\url{http://nose.readthedocs.io/en/latest/}}, and \emph{unittest}\footnote{\url{https://docs.python.org/2/library/unittest.html}} are the most commonly used. Each of these testing frameworks has their own unique ways to organize, discover, and run tests~\cite{nosetests}~\cite{pytests}. While this divergence is something any automated testing environment has to reckon with, it is also understood well enough that tools have evolved to help deal with this challenge.
 
