--- a/final-paper/paper.tex
+++ b/final-paper/paper.tex
@@ -66,13 +66,15 @@
 
 
 
+\begin{abstract}
+\input{abstract}
+\end{abstract}
+
+\ccsdesc[2.8]{D.2.8 [Software Engineering]: Design Tools and Techniques - 
+Software libraries}
 
 
-
-% \begin{abstract}
-% Many code bases rely on outdated dependencies that might pose security risks. We propose to develop a tool that can automatically detect dependencies with security risks, runs a build with updated dependencies, and informs the developer about potential upgrade errors. We plan to use the tool to analyze a range of Github projects in order to answer several research questions. We also aim to do a user study on the usability and usefulness of the proposed solution.
-% \end{abstract}
-
+\keywords{Vulnerabilities, Security, Python, GitHub}
 
 
 \maketitle
