--- a/final-paper/abstract.tex
+++ b/final-paper/abstract.tex
@@ -1,1 +1,1 @@
-todo
+Many code bases rely on outdated dependencies or use functions that might pose security risks. In this paper, we present Revelio, an open source tool that can automatically detect dependencies and functions with security risks in Python code, suggest safe alternatives, and informs the developer about potential errors. Using Revelio, we analyzed several projects on GitHub and evaluated the usability and usefulness of our solution in a user study. 
