--- a/final-paper/paper.tex
+++ b/final-paper/paper.tex
@@ -35,16 +35,16 @@
 
 \begin{document}
 
-\title{Detection and Mitigation of Dependencies with Security Risks}
+\title{Detection and Mitigation of Security Vulnerabilities}
 
 
-\author{Gleb Naumenko}
+\author{Anna Scholtz}
 \affiliation{%
   \institution{University of British Columbia}
   %\city{Vancouver}
   %\state{Canada}
 }
-\email{naumenko@cs.ubc.ca}
+\email{ascholtz@cs.ubc.ca}
 
 
 \author{Puneet Mehrotra}
@@ -56,13 +56,14 @@
 \email{puneet89@cs.ubc.ca}
 
 
-\author{Anna Scholtz}
+\author{Gleb Naumenko}
 \affiliation{%
   \institution{University of British Columbia}
   %\city{Vancouver}
   %\state{Canada}
 }
-\email{ascholtz@cs.ubc.ca}
+\email{naumenko@cs.ubc.ca}
+
 
 
 
